# bowtie

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  io-schema.json
src/: lib.rs  main.rs
tests/fauxmplementations/badsonschema/: badsonschema
tests/fauxmplementations/cheatsonschema/: cheatsonschema
