[package]
name = "bowtie"
version = "0.1.0"
edition = "2021"
authors = ["Julian Berman <Julian+Bowtie@GrayVines.com>"]
description = """
A tool for comparing implementations of the JSON Schema Specification.
"""
documentation = "https://github.com/python-jsonschema/bowtie"
homepage = "https://github.com/python-jsonschema/bowtie"
repository = "https://github.com/python-jsonschema/bowtie"
license = "MIT"
keywords = ["json", "schema", "data", "validation", "cross-language"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
bollard = "0.13"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
